# eba

./: .gitignore  .hgignore  .hgtags  CHANGES.md  INSTALL.md  LICENSE  Makefile  OMakefile  README.md  _config.yml  abs.ml  axioms.ml  axioms.mli  checkBhOnIrqFlow2.ml  checkDLockFlow2.ml  checkDoubleLock.ml  checkDoubleLock.mli  checkFiNoret.ml  checkFiUninit.ml  checkLocalUninit.ml  checkLocalUninit.mli  checkUAF.ml  checkUninitFile.ml  checkUninitFlow1.ml  cilExtra.ml  dune-project  eba.ml  eba.opam  env.ml  env.mli  error.ml  fiChecker.ml  fileAbs.ml  fileAbs.mli  fileChecker.ml  flow1Checker.ml  flow2Checker.ml  funAbs.ml  funAbs.mli  gcc.mli  (+16 more)
scripts/: eba-gcc.hs  eba-linux-next.sh  eba-linux.sh  eba-next-drivers.sh
scripts/docker-eval/: Dockerfile  build-docker.sh  (+4 more)
src/: abs.ml  automataChecker.ml  axioms.ml  axioms.mli  checkAutomataDoubleLock.ml  checkAutomataDoubleUnlock.ml  checkDUnlockFlow2.ml  checkDUnlockFlow2Inverse.ml  checkUAF.ml  cilExtra.ml  dune  eba.ml  eba_cfg.ml  env.ml  env.mli  error.ml  flow1Checker.ml  flow2Checker.ml  gcc.ml  infer.ml  jbuild  lenv.ml  opts.ml  opts.mli  pP.ml  pathTree.ml  pathTree.mli  structs.ml  structs.mli  type.ml  uniq.mli  utils.ml
test/: 0988.c  0dc7.c  0f8f.c  1c17.c  1f75.c  208d.c  218a.c  30e0.c  3685.c  472a.c  6252.c  6387.c  6e2b.c  7acf.c  bc8c.c  bug_mutrecstruct.c  cycle1.c  cycle2.c  d549.c  d7e9.c  double-lock.c  double-unlock.c  doublefree.c  e393.c  ee3.c  f7ab.c  fixed1c17.c  fptr.c  fptr1.c  fptr2.c  fptr3.c  fptr4.c  heuristics.t  hof.c  linux.t  path.t  structs1.c  structs2.c  structs3.c  uaf.c  (+1 more)
(+17 files in other folders)
