opam-version: "1.2"
name: "eba"
version: "0.1"
maintainer: "Iago Abal <mail@iagoabal.eu>"
author: "Iago Abal <mail@iagoabal.eu>"
homepage: "https://github.com/IagoAbal/eba/"
bug-reports: "https://github.com/IagoAbal/eba/issues"
dev-repo: "git://github.com/IagoAbal/eba/"
license: "BSD3"
build: [
    ["dune" "build" "-p" name "-j" jobs]
]
depends: [
    "dune" {build}
    "batteries"
    "cil" {= "1.7.4-eba"}
    "ocamlgraph"
    "smart-print"
    "cmdliner"
    "dolog" {>= "4.0.0"}
    "fpath"
    ]